# advent-of-code

./: README.md  xmas.py
2015/: aoc12.py  aoc17.py  aoc5.py  aoc7.py  aoc8.py  aoc9.py  test_all.py
2015/oxidised/: Cargo.toml
2015/oxidised/src/: aoc1.rs  aoc10.rs  aoc11.rs  aoc13.rs  aoc14.rs  aoc15.rs  aoc16.rs  aoc2.rs  aoc3.rs  aoc4.rs  aoc5.rs  aoc6.rs  aoc7.rs  aoc8.rs  aoc9.rs  lib.rs  (+2 more)
2015/python/: aoc12.py  aoc17.py  aoc5.py  aoc7.py  aoc8.py  aoc9.py  test_all.py
2015/rust/: Cargo.toml
2019/: aoc1.py  aoc11.py  aoc17.py  aoc2.py  aoc3.py  aoc4.py  aoc5.py  aoc6.py  aoc8.py  test_all.py
2019/data/: 8.out.txt
2019/oxidised/: Cargo.toml
2019/oxidised/src/: aoc1.rs  aoc10.rs  aoc11.rs  aoc12.rs  aoc13.rs  aoc14.rs  aoc16.rs  aoc17.rs  aoc2.rs  aoc3.rs  aoc4.rs  aoc5.rs  aoc6.rs  aoc7.rs  aoc8.rs  aoc9.rs  intcode.rs  lib.rs  main.rs  tests.rs
2019/python/: aoc1.py  aoc11.py  aoc2.py  aoc3.py  aoc5.py  aoc6.py  aoc8.py
2019/rust/: Cargo.toml
2020/: 16.options.complete.txt  aoc1.py  aoc10.py  aoc11.py  aoc12.py  aoc13.py  aoc14.py  aoc15.py  aoc16.py  aoc17.py  aoc18.py  aoc19.py  aoc2.py  aoc20.py  aoc21.py  aoc22.py  aoc23.py  aoc24.py  aoc25.py  aoc3.py  aoc4.py  aoc5.py  aoc6.py  aoc7.py  aoc8.py  aoc9.py  test_all.py
2020/oxidised/: Cargo.toml
2021/: aoc14.py  aoc17.py  aoc8.py
2021/oxidised/: Cargo.toml
2021/python/: aoc8.py  test_all.py
2023/python/: aoc1.py
2024/python/: aoc3.py  test_all.py
2024/rust/: Cargo.toml
oxidised/: Cargo.toml
oxidised/2020/: Cargo.toml
oxidised/aoc2020/: Cargo.toml
oxidised/src/: aoc1.rs
(+92 files in other folders)
