[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Martyn <martyn.smith560@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
ndarray = "0.14.0"
#structopt = "0.3.21"
#cached = "0.22.0"
num = "0.3.1"